tae's beta site is done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to Future <%= title %> Site</p>
+    <a href="/test4">Visit the Beta site</a>
+    <p>Macc2 development:</p>
+    <a href="https://obscure-tor-4138.herokuapp.com/">MACC2 prototype</a>
+    
   </body>
 </html>
