added codes of the day

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst"></script>
   </head>
   <body>
     <h1><%= title %></h1>
@@ -11,5 +12,13 @@
     <p>Macc2 development:</p>
     <a href="https://obscure-tor-4138.herokuapp.com/">MACC2 prototype</a>
     
+    <h2>commands of the day</h2>
+    <pre class="prettyprint">
+    sudo apt-get update
+    sudo apt-get install git-core curl build-essential openssl libssl-dev
+    sudo add-apt-repository ppa:chris-lea/node.js
+    sudo apt-get update
+    sudo apt-get install nodejs
+    </pre>
   </body>
 </html>
