--- a/views/test1.ejs
+++ b/views/test1.ejs
@@ -20,5 +20,8 @@
     <script src="/javascripts/jquery-1.9.0-min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <h2>command of the day</h2>
+    <p>sudo apt-get update</p>
+    <p>sudo apt-get install git-core curl build-essential openssl libssl-dev</p>
   </body>
 </html>
