minor look and feel fix

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     sudo apt-get update
     sudo apt-get install nodejs
     </pre>
-    <h3> Java installation for Ubuntu 12.04 <h3>
+    <h2> Java installation for Ubuntu 12.04 </h2>
     <pre class="prettyprint">
     sudo add-apt-repository ppa:webupd8team/java
     sudo apt-get update && sudo apt-get install oracle-jdk7-installer
