--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,27 +6,32 @@
     <script src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst"></script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to Future <%= title %> Site</p>
-    <a href="/test4">Visit the Beta site</a>
-    <p>Macc2 development:</p>
-    <a href="https://obscure-tor-4138.herokuapp.com/">MACC2 prototype</a>
-    
-    <h2>commands of the day</h2>
-    <pre class="prettyprint">
-    sudo apt-get update
-    sudo apt-get install git-core curl build-essential openssl libssl-dev
-    sudo add-apt-repository ppa:chris-lea/node.js
-    sudo apt-get update
-    sudo apt-get install nodejs
-    </pre>
-    <h2> Java installation for Ubuntu 12.04 </h2>
-    <pre class="prettyprint">
-    sudo add-apt-repository ppa:webupd8team/java
-    sudo apt-get update && sudo apt-get install oracle-jdk7-installer
-    update-alternatives –display java
-    /** for JAVA_HOME=/usr/lib/jvm/java-7-oracle */
-    sudo gedit /etc/environment
-    </pre>
+    <div class="container">
+        <h1><%= title %></h1>
+        <p>Welcome to Future <%= title %> Site</p>
+        <a href="/test4">Visit the Beta site</a>
+        <p>Macc2 development:</p>
+        <a href="https://obscure-tor-4138.herokuapp.com/">MACC2 prototype</a>
+        
+        <h2>commands of the day</h2>
+        <pre class="prettyprint">
+        sudo apt-get update
+        sudo apt-get install git-core curl build-essential openssl libssl-dev
+        sudo add-apt-repository ppa:chris-lea/node.js
+        sudo apt-get update
+        sudo apt-get install nodejs
+        </pre>
+        <h2> Java installation for Ubuntu 12.04 </h2>
+        <pre class="prettyprint">
+        sudo add-apt-repository ppa:webupd8team/java
+        sudo apt-get update && sudo apt-get install oracle-jdk7-installer
+        update-alternatives –display java
+        /** for JAVA_HOME=/usr/lib/jvm/java-7-oracle */
+        sudo gedit /etc/environment
+        </pre>
+    </div>
+    <!-- Bootstrap core CSS -->
+    <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
