added tip for creating sudoer in ubuntu

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,14 @@
         sudo gedit /etc/environment
         </pre>
 
+        <h3>  <span class="glyphicon glyphicon-hand-right blue"> </span> Java installation for Ubuntu 12.04 </h3>
+        <pre class="prettyprint">
+        sudo adduser <username> sudo
+        #This works because /etc/sudoers is pre-configured to grant permissions to all members 
+        # Allow members of group sudo to execute any command
+        %sudo   ALL=(ALL:ALL) ALL
+        </pre>
+
     </div>
     <br>
     <br>
