Lable for the tip corrected

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
         sudo gedit /etc/environment
         </pre>
 
-        <h3>  <span class="glyphicon glyphicon-hand-right blue"> </span> Java installation for Ubuntu 12.04 </h3>
+        <h3>  <span class="glyphicon glyphicon-hand-right blue"> </span> Add Sudoer for Ubuntu 12.04 </h3>
         <pre class="prettyprint">
         sudo adduser <username> sudo
         #This works because /etc/sudoers is pre-configured to grant permissions to all members 
