--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
 
         <h3>  <span class="glyphicon glyphicon-hand-right blue"> </span> Add Sudoer for Ubuntu 12.04 </h3>
         <pre class="prettyprint">
-        sudo adduser <username> sudo
+        sudo adduser &ltusername&gt sudo
         #This works because /etc/sudoers is pre-configured to grant permissions to all members 
         # Allow members of group sudo to execute any command
         %sudo   ALL=(ALL:ALL) ALL
